apps/services/media/ganymede/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ganymede-taiscale
  labels:
    app: ganymede
  annotations:
    tailscale.com/hostname: "vods"
spec:
  selector:
    app: ganymede
  ports:
  - name: web
    port: 80
    targetPort: 3000
    protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: backend-vods-tls
  labels:
    app: ganymede
  annotations:
    tailscale.com/hostname: "backend-vods"
spec:
  selector:
    app: ganymede
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: ganymede-backend-internal
  labels:
    app: ganymede
spec:
  type: ClusterIP
  selector:
    app: ganymede
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ganymede-internal
  labels:
    app: ganymede
spec:
  type: ClusterIP
  selector:
    app: ganymede
  ports:
  - name: web
    port: 80
    targetPort: 3000
    protocol: TCP
