apps/services/media/ganymede/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ganymede-frontend
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vods.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vods.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ganymede-taiscale
            port:
              name: web
  - host: vods.gruber.dev.br
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ganymede-backend-ts
            port:
              name: http
  tls:
  - hosts:
    - vods.gruber.dev.br
    secretName: vods-tls
